c++: ICE with redundant capture [PR108829]

Here we crash in is_capture_proxy:

  /* Location wrappers should be stripped or otherwise handled by the
     caller before using this predicate.  */
  gcc_checking_assert (!location_wrapper_p (decl));

so fixed as the comment suggests.  We only crash with the redundant
capture:

  int abyPage = [=, abyPage] { ... }

because prune_lambda_captures is only called when there was a default
capture, and with [=] only abyPage won't be in LAMBDA_EXPR_CAPTURE_LIST.

Bootstrapped/regtested on x86_64-pc-linux-gnu, ok for trunk/12?

	PR c++/108829

gcc/cp/ChangeLog:

	* lambda.cc (var_to_maybe_prune): Strip location wrappers before
	checking for a capture proxy.

gcc/testsuite/ChangeLog:

	* g++.dg/cpp0x/lambda/lambda-108829.C: New test.